--- a/gb/24/8/9/n14308097.md
+++ b/gb/24/8/9/n14308097.md
@@ -10,38 +10,38 @@
 <p>今天的赛事非常密集，尤其是当地时间的下午之后，令人瞩目的赛事包括：足球男子金牌赛，东道主法国队迎战西班牙队；桌球男子团体金牌赛，中国组合对阵瑞典组合；田径女子4&#215;100米接力决赛，以及女子10,000米决赛和男子400米障碍决赛等。</p>
 <p>今天霹雳舞女子组将展开首届奥运会竞赛，争夺金牌。日本选手B-Girls Ayumi、世界冠军立陶宛选手Nicka都在竞争者之列。</p>
 <h3><strong>以下是8月9日北美时间18点40分更新的巴黎奥运奖牌榜：</strong></h3>
-<figure id="attachment_14308424" aria-describedby="caption-attachment-14308424" style="width: 507px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308424-Screenshot-2024-08-09-at-6.35.36-PM.jpg"><img decoding="async" class="size-full wp-image-14308424" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308424-Screenshot-2024-08-09-at-6.35.36-PM.jpg" alt="" width="507" b="840" /></a><figcaption id="caption-attachment-14308424" class="wp-caption-text">数据来源：巴黎奥运官网。（大纪元制图）</figcaption></figure>
-<p><strong>日本选手Ami Yuasa赢得史上第一枚霹雳舞金牌</strong></p>
-<figure id="attachment_14308413" aria-describedby="caption-attachment-14308413" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308413-AFP__20240809__36DF6Q9__v1__HighRes__BreakingOlyParis2024Women-e1723242024196.jpg"><img decoding="async" class="size-full wp-image-14308413" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308413-AFP__20240809__36DF6Q9__v1__HighRes__BreakingOlyParis2024Women-e1723242024196.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308413" class="wp-caption-text">2024年8月9日，巴黎协和广场，2024年巴黎奥运会女子霹雳舞循环赛金牌得主日本选手Ami Yuasa在领奖台上合照。 (Odd Andersen/AFP)</figcaption></figure>
+<figure id="attachment_14308424" aria-describedby="caption-attachment-14308424" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308424-Screenshot-2024-08-09-at-6.35.36-PM.jpg"><img decoding="async" class=" wp-image-14308424" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308424-Screenshot-2024-08-09-at-6.35.36-PM.jpg" alt="" width="450" b="746" /></a><figcaption id="caption-attachment-14308424" class="wp-caption-text">数据来源：巴黎奥运官网。（大纪元制图）</figcaption></figure>
+<h3><strong>日本选手Ami Yuasa赢得史上第一枚霹雳舞金牌</strong></h3>
+<figure id="attachment_14308413" aria-describedby="caption-attachment-14308413" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308413-AFP__20240809__36DF6Q9__v1__HighRes__BreakingOlyParis2024Women-e1723242024196.jpg"><img decoding="async" class="size-full wp-image-14308413" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308413-AFP__20240809__36DF6Q9__v1__HighRes__BreakingOlyParis2024Women-e1723242024196.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308413" class="wp-caption-text">2024年8月9日，巴黎协和广场，2024年巴黎奥运会女子霹雳舞循环赛金牌得主日本选手Ami Yuasa在领奖台上合照。(Odd Andersen/AFP)</figcaption></figure>
 <p>日本选手Ami Yuasa（B-Girl Ami）结合艺术与运动技巧，在与立陶宛选手Dominika Banevic（B-Girl Nicka）的决赛中赢得胜利，并在周五的决赛中以实力赢得史上第一枚霹雳舞奥运金牌。</p>
-<p><b>女子10000米决赛 肯尼亚选手夺金</b></p>
-<figure id="attachment_14308428" aria-describedby="caption-attachment-14308428" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308428-AFP__20240809__36DC47M__v1__HighRes__AthleticsOlyParis2024-e1723243341483.jpg"><img decoding="async" class="size-full wp-image-14308428" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308428-AFP__20240809__36DC47M__v1__HighRes__AthleticsOlyParis2024-e1723243341483.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308428" class="wp-caption-text">2024年8月9日，巴黎北部圣丹尼的法国国家体育馆，肯亚选手Beatrice Chebet在2024年巴黎奥运会田径项目女子10000米决赛中胜出后庆祝。 (Martin Bernetti/AFP)</figcaption></figure>
-<p>在女子10000米决赛中，肯尼亚选手Beatrice Chebet以30分43秒25的成绩夺得金牌，意大利选手Nadia Battocletti成绩是30分43秒35，夺得银牌，铜牌得主荷兰选手Sifan Hassan，成绩是30分44秒12。</p>
-<p><b>18</b><b>岁跆拳道选手为匈牙利取得</b><b>67</b><b>公斤级金牌</b></p>
-<figure id="attachment_14308417" aria-describedby="caption-attachment-14308417" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308417-AFP__20240809__36DF3TY__v2__HighRes__TaekwondoOlyParis2024-e1723242150542.jpg"><img decoding="async" class="size-full wp-image-14308417" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308417-AFP__20240809__36DF3TY__v2__HighRes__TaekwondoOlyParis2024-e1723242150542.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308417" class="wp-caption-text">8月9日，巴黎大皇宫，匈牙利选手Viviana Marton（左）在2024年巴黎奥运会跆拳道女子67公斤级金牌战中击败塞尔维亚选手Aleksandra Perisic，赢得胜利后与教练携同加那利群岛和匈牙利的旗帜庆祝。 (David Gray/AFP)</figcaption></figure>
-<p>巴黎奥运会女子跆拳道67公斤级比赛中，18岁的匈牙利选手Viviana Marton赢得金牌，为匈牙利赢得该项目的第一枚奥运奖牌。Marton以第一轮7-1，第二轮4-2的比分击败银牌得主塞尔维亚选手Aleksandra Perisic。</p>
-<p>另一位小有名气的选手、突尼斯的Firas Katoussi随后以第一轮4-2，第二轮5-1的比分击败伊朗的Mehran Barkhordari，获得男子80公斤级金牌。</p>
-<p><b>荷兰在曲棍球决赛中击败中国</b><b> </b><b>卫冕冠军</b></p>
+<h3><b>女子10,000米决赛 肯尼亚选手夺金</b></h3>
+<figure id="attachment_14308428" aria-describedby="caption-attachment-14308428" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308428-AFP__20240809__36DC47M__v1__HighRes__AthleticsOlyParis2024-e1723243341483.jpg"><img decoding="async" class="size-full wp-image-14308428" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308428-AFP__20240809__36DC47M__v1__HighRes__AthleticsOlyParis2024-e1723243341483.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308428" class="wp-caption-text">2024年8月9日，巴黎北部圣丹尼法国国家体育馆，肯尼亚选手Beatrice Chebet在2024年巴黎奥运会田径项目女子10,000米决赛中胜出后庆祝。(Martin Bernetti/AFP)</figcaption></figure>
+<p>在女子10,000米决赛中，肯尼亚选手Beatrice Chebet以30分43秒25的成绩夺得金牌，意大利选手Nadia Battocletti成绩是30分43秒35，夺得银牌，铜牌得主荷兰选手Sifan Hassan，成绩是30分44秒12。</p>
+<h3><b>18</b><b>岁跆拳道选手为匈牙利取得</b><b>67</b><b>公斤级金牌</b></h3>
+<figure id="attachment_14308417" aria-describedby="caption-attachment-14308417" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308417-AFP__20240809__36DF3TY__v2__HighRes__TaekwondoOlyParis2024-e1723242150542.jpg"><img decoding="async" class="size-full wp-image-14308417" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308417-AFP__20240809__36DF3TY__v2__HighRes__TaekwondoOlyParis2024-e1723242150542.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308417" class="wp-caption-text">8月9日，巴黎大皇宫，匈牙利选手Viviana Marton（左）在2024年巴黎奥运会跆拳道女子67公斤级金牌战中击败塞尔维亚选手Aleksandra Perisic，赢得胜利后与教练携同加那利群岛和匈牙利的旗帜庆祝。(David Gray/AFP)</figcaption></figure>
+<p>巴黎奥运会女子跆拳道67公斤级比赛中，18岁的匈牙利选手Viviana Marton赢得金牌，为匈牙利赢得该项目的第一枚奥运奖牌。Marton以第一轮7:1，第二轮4:2的比分击败银牌得主、塞尔维亚选手Aleksandra Perisic。</p>
+<p>另一位小有名气的选手、突尼斯的Firas Katoussi随后以第一轮4:2，第二轮5:1的比分击败伊朗的Mehran Barkhordari，获得男子80公斤级金牌。</p>
+<h3><b>荷兰在曲棍球决赛中击败中国</b><b> </b><b>卫冕冠军</b></h3>
 <figure id="attachment_14308419" aria-describedby="caption-attachment-14308419" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308419-AFP__20240809__36DG222__v1__HighRes__FhockeyOlyParis2024NedChn-e1723242335632.jpg"><img decoding="async" class="size-full wp-image-14308419" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308419-AFP__20240809__36DG222__v1__HighRes__FhockeyOlyParis2024NedChn-e1723242335632.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308419" class="wp-caption-text">8月9日，2024年巴黎奥运会期间，在Yves-du-Manoir体育场举行的女子曲棍球决赛中，荷兰队守门员Anne Veenendaal扑出中国队中场马宁的点球后进行庆祝。(Arun Sankar/AFP)</figcaption></figure>
-<p>荷兰在巴黎奥运会上以1-1战平常规时间后，在点球大战中以3-1击败中国队，成功卫冕女子冠军，这也是继周四男子队夺冠后荷兰在本届奥运会上的第二个曲棍球冠军。</p>
+<p>荷兰在巴黎奥运会上以1:1战平常规时间后，在点球大战中以3:1击败中国队，成功卫冕女子冠军，这也是继周四男子队夺冠后荷兰在本届奥运会上的第二个曲棍球冠军。</p>
 <p>在点球大战中，中国队未能将前两次尝试转化为得分，而荷兰门将Anne Veenendaal则扑出了马宁的第四次射门，最终帮助荷兰队赢得胜利，拿下他们在奥运会女子曲棍球比赛中的第五个冠军。</p>
-<p><b>阿尔及利亚拳击手战胜中国对手夺金</b></p>
-<figure id="attachment_14308421" aria-describedby="caption-attachment-14308421" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308421-AFP__20240809__36DG8T4__v1__HighRes__BoxingOlyParis2024Medals-e1723242473671.jpg"><img decoding="async" class="size-full wp-image-14308421" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308421-AFP__20240809__36DG8T4__v1__HighRes__BoxingOlyParis2024Medals-e1723242473671.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308421" class="wp-caption-text">8月9日，在巴黎罗兰加洛斯体育馆举行的2024年巴黎奥运会拳击女子66公斤级决赛奖牌颁发仪式上，金牌得主阿尔及利亚选手Imane Khelif在领奖台上合影。(Mauro Pimentel/AFP)</figcaption></figure>
-<p>阿尔及利亚拳击手Imane Khelif在巴黎奥运会一开始就成为性别争议的焦点，Khelif在女子66公斤级决赛中，以5-0完胜中国选手杨柳，取得金牌。来自内蒙古的拳击手杨柳获得银牌。</p>
-<h3><b>男子足球决赛 西班牙</b><b>5-3</b><b>击败法国夺金</b></h3>
-<figure id="attachment_14308380" aria-describedby="caption-attachment-14308380" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308380-AFP__20240809__36DB9AP__v1__HighRes__FblOlyParis2024FraEsp-e1723232205642.jpg"><img decoding="async" class="size-full wp-image-14308380" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308380-AFP__20240809__36DB9AP__v1__HighRes__FblOlyParis2024FraEsp-e1723232205642.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308380" class="wp-caption-text">2024年8月9日，在巴黎王子公园体育场举行的2024年巴黎奥运会男子足球金牌决赛中，法国对西班牙，西班牙队员在比赛结束后庆祝胜利。西班牙以5-3胜出。(Luis Robayo/AFP)</figcaption></figure>
-<p>巴黎奥运会男子足球决赛中，西班牙队以5-3战胜法国队，成功夺得金牌。此前，西班牙男足只有在1992年巴塞罗那奥运会成功夺得金牌，其余三次都是获得银牌。</p>
+<h3><b>阿尔及利亚拳击手战胜中国对手夺金</b></h3>
+<figure id="attachment_14308421" aria-describedby="caption-attachment-14308421" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308421-AFP__20240809__36DG8T4__v1__HighRes__BoxingOlyParis2024Medals-e1723242473671.jpg"><img decoding="async" class="size-full wp-image-14308421" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308421-AFP__20240809__36DG8T4__v1__HighRes__BoxingOlyParis2024Medals-e1723242473671.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308421" class="wp-caption-text">8月9日，在巴黎罗兰加洛斯体育馆举行的2024年巴黎奥运会拳击女子66公斤级决赛奖牌颁发仪式上，金牌得主、阿尔及利亚选手Imane Khelif在领奖台上合影。(Mauro Pimentel/AFP)</figcaption></figure>
+<p>阿尔及利亚拳击手Imane Khelif在巴黎奥运会一开始就成为性别争议的焦点，Khelif在女子66公斤级决赛中，以5:0完胜中国选手杨柳，取得金牌。来自内蒙古的拳击手杨柳获得银牌。</p>
+<h3><b>男子足球决赛 西班牙</b><b>5:3</b><b>击败法国夺金</b></h3>
+<figure id="attachment_14308380" aria-describedby="caption-attachment-14308380" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308380-AFP__20240809__36DB9AP__v1__HighRes__FblOlyParis2024FraEsp-e1723232205642.jpg"><img decoding="async" class="size-full wp-image-14308380" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308380-AFP__20240809__36DB9AP__v1__HighRes__FblOlyParis2024FraEsp-e1723232205642.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308380" class="wp-caption-text">2024年8月9日，在巴黎王子公园体育场举行的2024年巴黎奥运会男子足球金牌决赛中，法国对西班牙，西班牙队员在比赛结束后庆祝胜利。西班牙以5:3胜出。(Luis Robayo/AFP)</figcaption></figure>
+<p>巴黎奥运会男子足球决赛中，西班牙队以5:3战胜法国队，成功夺得金牌。此前，西班牙男足只有在1992年巴塞罗那奥运会成功夺得金牌，其余三次都是获得银牌。</p>
 <p>比赛过程中，西班牙球员合作无间，控球出色，防守稳妥。法国队虽然在主场作战，并一度追平比分，最终不敌西班牙。</p>
 <h3><b>埃及选手五项全能半决赛成绩破奥运纪录</b><b> </b><b>有望摘金</b></h3>
-<figure id="attachment_14308381" aria-describedby="caption-attachment-14308381" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308381-AFP__20240809__36CV8BV__v2__HighRes__PentathlonOlyParis2024-e1723232376309.jpg"><img decoding="async" class="size-full wp-image-14308381" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308381-AFP__20240809__36CV8BV__v2__HighRes__PentathlonOlyParis2024-e1723232376309.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308381" class="wp-caption-text">2024年8月10日，巴黎凡尔赛城堡，2024年巴黎奥运会期间，埃及选手Ahmed Elgendy参加现代五项全能男子个人激光跑比赛。 (Miguel Medina/AFP)</figcaption></figure>
+<figure id="attachment_14308381" aria-describedby="caption-attachment-14308381" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308381-AFP__20240809__36CV8BV__v2__HighRes__PentathlonOlyParis2024-e1723232376309.jpg"><img decoding="async" class="size-full wp-image-14308381" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308381-AFP__20240809__36CV8BV__v2__HighRes__PentathlonOlyParis2024-e1723232376309.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308381" class="wp-caption-text">2024年8月10日，巴黎凡尔赛城堡，2024年巴黎奥运会期间，埃及选手Ahmed Elgendy参加现代五项全能男子个人激光跑比赛。(Miguel Medina/AFP)</figcaption></figure>
 <p>埃及选手Ahmed Elgendy在巴黎奥运会男子现代五项全能半决赛中，以创下奥运纪录的总分成绩1516，进入决赛。</p>
 <p>Elgendy三年前在东京奥运赢得银牌，但这位24岁的选手希望在凡尔赛宫令人印象深刻的背景下，为他的国家赢得2024年奥运会的首金。</p>
 <p>现代五项包括马术、击剑、射击、赛跑和游泳，对运动员的耐力和综合素质要求很高。</p>
 <h3><b>德国艺术体操首次获得金牌</b></h3>
-<figure id="attachment_14308382" aria-describedby="caption-attachment-14308382" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308382-AFP__20240809__36D86Q9__v1__HighRes__OlympicsRhythmicGymnasticsWomenSAllAroundFinal-e1723232588683.jpg"><img decoding="async" class="size-full wp-image-14308382" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308382-AFP__20240809__36D86Q9__v1__HighRes__OlympicsRhythmicGymnasticsWomenSAllAroundFinal-e1723232588683.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308382" class="wp-caption-text">2024年8月9日，2024年巴黎奥运会期间，德国选手Darja Varfolomeev在巴黎的拉夏贝尔门体育馆（Porte de la Chapelle Arena）参加艺术体操个人全能决赛。 (Gabriel Bouys/AFP)</figcaption></figure>
+<figure id="attachment_14308382" aria-describedby="caption-attachment-14308382" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308382-AFP__20240809__36D86Q9__v1__HighRes__OlympicsRhythmicGymnasticsWomenSAllAroundFinal-e1723232588683.jpg"><img decoding="async" class="size-full wp-image-14308382" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308382-AFP__20240809__36D86Q9__v1__HighRes__OlympicsRhythmicGymnasticsWomenSAllAroundFinal-e1723232588683.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308382" class="wp-caption-text">2024年8月9日，2024年巴黎奥运会期间，德国选手Darja Varfolomeev在巴黎的拉夏贝尔门体育馆（Porte de la Chapelle Arena）参加艺术体操个人全能决赛。(Gabriel Bouys/AFP)</figcaption></figure>
 <p>德国选手Darja Varfolomeev在周五的奥运艺术体操个人全能决赛中赢得金牌，成为该项目中第一位夺冠的德国选手。</p>
 <p>这是德国自1984年洛杉矶奥运会Regina Weber夺得铜牌后，首次在奥运体操项目上获得奖牌。Varfolomeev总分142.850分，领先赢得银牌的保加利亚选手Boryana Kaleyn 2.250分，意大利选手Sofia Raffaeli获得铜牌。</p>
-<h3><b>19岁英国选手运动攀登全能摘金?</b></h3>
+<h3><b>19岁英国选手运动攀登全能摘金</b></h3>
 <figure id="attachment_14308385" aria-describedby="caption-attachment-14308385" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308385-AFP__20240809__36D47NW__v1__HighRes__ClimbingOly2024Paris-e1723232999180.jpg"><img decoding="async" class="size-full wp-image-14308385" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308385-AFP__20240809__36D47NW__v1__HighRes__ClimbingOly2024Paris-e1723232999180.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308385" class="wp-caption-text">2024年8月9日，2024年巴黎奥运会期间，（由左至右）日本银牌得主Sorato Anraku、英国金牌得主Toby Roberts（中）和奥地利铜牌得主Jakob Schubert，在勒布尔歇（Le Bourget）运动攀岩场馆举行的男子运动攀岩决赛后在领奖台上合照。(Fabrice Coffrini/AFP)</figcaption></figure>
 <p>年轻的英国选手Toby Roberts在攀石和难度攀岩决赛中经过近三个小时的智力和耐力的考验，最终赢得金牌，而获得银牌的日本选手Sorato Anraku也只有17岁，奥地利选手Jakob Schubert获得铜牌。</p>
 <h3><b>超燃！场地自行车女子争先赛</b><b>1/32</b><b>决赛</b><b> </b><b>纪录被不停打破</b></h3>
@@ -49,20 +49,20 @@
 <p>今天举行的场地自行车女子争先赛1/32决赛中，比赛精彩激烈、振奋人心，在率先进行的200米计时赛中，奥运会纪录被打破11次，世界纪录也被打破了4次。</p>
 <p>德国选手Lea Sophie Friedrich在200米计时赛中以10秒029的最新世界纪录，进入下一轮比拼。</p>
 <h3><b>奥运中爆红的韩国女空气手枪射手晕倒</b></h3>
-<figure id="attachment_14308387" aria-describedby="caption-attachment-14308387" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308387-AFP__20240802__368T7YE__v1__HighRes__ShootingOlyParis2024-e1723233465182.jpg"><img decoding="async" class="size-full wp-image-14308387" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308387-AFP__20240802__368T7YE__v1__HighRes__ShootingOlyParis2024-e1723233465182.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308387" class="wp-caption-text">2024年8月2日，2024年巴黎奥运会期间，韩国选手金艺智（Kim Ye-ji）在沙托鲁（Chateauroux）射击中心参加女子25米空气手枪资格赛。 (Alain Jocard/AFP)</figcaption></figure>
+<figure id="attachment_14308387" aria-describedby="caption-attachment-14308387" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308387-AFP__20240802__368T7YE__v1__HighRes__ShootingOlyParis2024-e1723233465182.jpg"><img decoding="async" class="size-full wp-image-14308387" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308387-AFP__20240802__368T7YE__v1__HighRes__ShootingOlyParis2024-e1723233465182.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308387" class="wp-caption-text">2024年8月2日，2024年巴黎奥运会期间，韩国选手金艺智（Kim Ye-ji）在沙托鲁（Chateauroux）射击中心参加女子25米空气手枪资格赛。(Alain Jocard/AFP)</figcaption></figure>
 <p>韩国奥运空气手枪银牌得主金艺智（Kim Ye-ji），因其在巴黎奥运会比赛时的冷静风度和主角气质让她成为社交媒体的红人，但今天她在韩国出席新闻发布会时突然昏倒，似乎是因为压力和疲惫所致。后来她恢复意识且被送往医院。</p>
 <h3><b>总统为庆祝赢得金牌 全国放假半天</b></h3>
-<figure id="attachment_14308390" aria-describedby="caption-attachment-14308390" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308390-AFP__20240808__36CR8JV__v1__HighRes__AthleticsOlyParis2024-e1723233749322.jpg"><img decoding="async" class="size-full wp-image-14308390" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308390-AFP__20240808__36CR8JV__v1__HighRes__AthleticsOlyParis2024-e1723233749322.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308390" class="wp-caption-text">2024年8月8日，巴黎北部圣丹尼的法兰西体育馆，博茨瓦纳选手Letsile Tebogo赢得2024年巴黎奥运会田径项目男子200米决赛冠军后庆祝。 (Martin Bernetti/AFP)</figcaption></figure>
+<figure id="attachment_14308390" aria-describedby="caption-attachment-14308390" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308390-AFP__20240808__36CR8JV__v1__HighRes__AthleticsOlyParis2024-e1723233749322.jpg"><img decoding="async" class="size-full wp-image-14308390" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308390-AFP__20240808__36CR8JV__v1__HighRes__AthleticsOlyParis2024-e1723233749322.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308390" class="wp-caption-text">2024年8月8日，巴黎北部圣丹尼的法兰西体育馆，博茨瓦纳选手Letsile Tebogo赢得2024年巴黎奥运会田径项目男子200米决赛冠军后庆祝。(Martin Bernetti/AFP)</figcaption></figure>
 <p>博茨瓦纳总统宣布周五下午为半天公共假期，以庆祝Letsile Tebogo在周四（8月8日）的200米比赛中夺得该国第一枚奥运金牌。</p>
 <p>Tebogo跑出了19.46秒的成绩，他也是六十多年来在这个项目上赢得金牌的最年轻选手。</p>
 <p>Tebogo在比赛中击败了美国选手Kenny Bednarek和感染了COVID-19的美国男子百米“飞人”Noah Lyles，Lyles表示，感染病毒影响了他的表现。</p>
 <h3><b>美国队在田径接力赛中占据主导地位</b></h3>
-<figure id="attachment_14308391" aria-describedby="caption-attachment-14308391" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308391-AFP__20240809__36DA8EY__v3__HighRes__TopshotAthleticsOlyParis2024-e1723234304424.jpg"><img decoding="async" class="size-full wp-image-14308391" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308391-AFP__20240809__36DA8EY__v3__HighRes__TopshotAthleticsOlyParis2024-e1723234304424.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308391" class="wp-caption-text">2024年8月9日，巴黎北部圣丹尼的法兰西体育馆，由Melissa Jefferson、Twanisha Terry、Gabrielle Thomas和Sha&#8217;Carri Richardson组成的美国队赢得2024年巴黎奥运会田径赛事女子4&#215;100米接力决赛后进行庆祝。 (Ben Stansall/AFP)</figcaption></figure>
+<figure id="attachment_14308391" aria-describedby="caption-attachment-14308391" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308391-AFP__20240809__36DA8EY__v3__HighRes__TopshotAthleticsOlyParis2024-e1723234304424.jpg"><img decoding="async" class="size-full wp-image-14308391" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308391-AFP__20240809__36DA8EY__v3__HighRes__TopshotAthleticsOlyParis2024-e1723234304424.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308391" class="wp-caption-text">2024年8月9日，巴黎北部圣丹尼的法兰西体育馆，由Melissa Jefferson、Twanisha Terry、Gabrielle Thomas和Sha&#8217;Carri Richardson组成的美国队赢得2024年巴黎奥运会田径赛事女子4&#215;100米接力决赛后进行庆祝。(Ben Stansall/AFP)</figcaption></figure>
 <p>美国选手在奥运女子4&#215;100米接力赛中以赛季最好成绩41秒78，赢得金牌。英国队获得银牌，德国队获得铜牌。自1996年以来，美国队几乎赢得了每届女子4&#215;400米接力的冠军。</p>
 <p>加拿大选手赢得男子4&#215;100米接力金牌，成绩是37秒50，南非队以37秒57获得银牌，英国队以37秒61获得铜牌。</p>
 <h3><b>匈牙利选手男子马拉松游泳夺金 水质问题导致有选手退赛</b></h3>
 <figure id="attachment_14308392" aria-describedby="caption-attachment-14308392" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308392-AFP__20240809__36CX4G7__v1__HighRes__MarathonSwimmingOlyParis2024Medals-e1723234506849.jpg"><img decoding="async" class="size-full wp-image-14308392" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308392-AFP__20240809__36CX4G7__v1__HighRes__MarathonSwimmingOlyParis2024Medals-e1723234506849.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308392" class="wp-caption-text">2024年8月9日，2024年巴黎奥运会男子10公里马拉松游泳决赛颁奖典礼在巴黎亚历山大三世桥举行，（由左至右）银牌得主德国选手Oliver Klemet、金牌得主匈牙利选手Kristof Rasovszky及铜牌得主匈牙利选手David Betlehem在颁奖台上合照。(Mauro Pimentel/AFP)</figcaption></figure>
-<p>匈牙利选手Kristof Rasovszky以1小时50分钟52秒7的成绩，击败德国银牌得主Oliver Klemet，赢得男子10公里马拉松游泳金牌。Klemet的成绩是1小时50分54秒8，仅仅落后第一名2秒1。Rasovszky的队友David Betlehem获得铜牌，他的成绩是1小时51分9秒。</p>
+<p>匈牙利选手Kristof Rasovszky以1小时50分52秒7的成绩，击败德国银牌得主Oliver Klemet，赢得男子10公里马拉松游泳金牌。Klemet的成绩是1小时50分54秒8，仅仅落后第一名2秒1。Rasovszky的队友David Betlehem获得铜牌，他的成绩是1小时51分9秒。</p>
 <p>塞纳河的水质状况一直是个难题，尽管主办单位表示水质已经达标，但是运动员们依然需要克服外界困难参加比赛。瑞典选手Victor Johansson宣布退出今天的比赛，据报导，他退赛的主要原因是塞纳河的水质问题。</p>
 <h3><b>张本智和遭法国</b><b>17</b><b>岁新星逆转</b><b> </b><b>日本痛失男子桌球铜牌</b></h3>
 <figure id="attachment_14308304" aria-describedby="caption-attachment-14308304" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14308304-AFP__20240809__36D23JV__v1__HighRes__TableTennisOlyParis2024-e1723214639577.jpg"><img decoding="async" class="size-full wp-image-14308304" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308304-AFP__20240809__36D23JV__v1__HighRes__TableTennisOlyParis2024-e1723214639577.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14308304" class="wp-caption-text">2024年8月9日，巴黎南巴黎竞技场，2024年巴黎奥运会乒乓球男子团体铜牌赛，法国选手Felix Lebrun在法国对日本的乒乓球单打比赛中庆祝得分。(Wang Zhao/AFP)</figcaption></figure>
@@ -120,14 +120,13 @@
 <p><em>（具体比赛时间会因比赛场地和其它原因有所变化）</em></p>
 <p>责任编辑：李皓月#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305959.md#1">奥运自行车公路赛 哈佛高材生为美摘40年来首金</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306142.md#1">奥运第11日：美国队以2金优势 领跑金牌榜</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307114.md#1">奥运麟洋配荣获金牌 桃园市图办奥运主题书展</a></li>
+<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/15/n11590692.md#1" target="_blank">林辉：一个曾给毛献花女孩对父亲的忏悔</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/9/12/n9623089.md#1" target="_blank">坚持在卢森堡公园炼功 法国法轮功学员谈感受</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/7/n9812644.md#1" target="_blank">游兆和：从“十月革命”看共产革命本质</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/30/n9090867.md#1" target="_blank">从制鞋工到超级业务员的修炼人生</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
@@ -139,6 +138,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307546.md#1">【中国禁闻】中国爆盗卖遗体黑色产业链</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
@@ -149,5 +149,6 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
+<hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/8/9/n14308097.htm">【更新】2024年巴黎奥运奖牌榜 8月9日</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308097.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
